# pg_cmake_template

./: .gitignore  CMakeLists.txt  DemoPGExtension.control  build.sh  demopgextension.control  readme
sql/: CmakeLists.txt  install.sql
src/: CmakeLists.txt  extension.c  extension.h  guc.c  guc.h
